--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -26,11 +26,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:autoSizeMaxTextSize="34dp"
-        android:autoSizeMinTextSize="16dp"
-        android:autoSizeTextType="uniform"
         android:maxHeight="100dp"
-        android:textSize="34dp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/poster_detail"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +36,7 @@
     <TextView
         android:id="@+id/synopsis"
         android:layout_width="0dp"
-        android:layout_height="103dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -53,14 +50,14 @@
         android:id="@+id/vote_average"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:text="8.2/10"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/title_detail"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/title_detail"
+        tools:text="8.2/10"/>
 
     <TextView
         android:id="@+id/duration"
@@ -83,4 +80,27 @@
         app:layout_constraintStart_toEndOf="@+id/poster_detail"
         app:layout_constraintTop_toBottomOf="@+id/title_detail"
         tools:text="2006"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/trailers"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/synopsis"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/comments"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/trailers"/>
 </android.support.constraint.ConstraintLayout>
